--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
     <div class="row g-5 mb-5">
   <div class="col-md-6">
-    <h3 class="fw-bold">About</h3>
+    <h3 class="fw-bold">Writer, editor, curator, performer</h3>
     {{ content }}
   </div>
   <div class="col-md-6">
