--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,9 @@
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Contact</h3>
+    <h3 class="fw-bold border-bottom pb-3 mb-5">About</h3>
     {% for contact in site.data.settings.contacts %}
     <div class="row g-5 mb-5">
       <div class="col-md-6">
-        <h4>{{ Nikki Columbus }}</h4>
         <p>Email: {{ nikkicolumbus(at)mac.com }}</p>
       </div>
       <div class="col-md-6">
