--- a/_layouts/curating.html
+++ b/_layouts/curating.html
@@ -7,7 +7,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div>
     <h3 class="fw-bold border-bottom pb-3 mb-5">Curating</h3>
-    {% for course in site.data.settings.curating %}
+    {% for curating in site.data.settings.curating %}
       <p><a href="{{ site.github.url }}/curating/{{ curating.url}}">{{ curating.name }}</a></p>
     {% endfor %}
   </div>
