Update and rename contact.html to about.html

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <p>Email: {{ nikkicolumbus(at)mac.com }}</p>
       </div>
       <div class="col-md-6">
-        <img src="{{ site.github.url }}/{{ contact.image }}" alt="About" width="100%">
+        <img src="{{ site.github.url }}/{{ about.image }}" alt="About" width="100%">
       </div>
     </div>
     {% endfor %}
